# Qubit-Protocol-84m

./: .gitignore  124M-SOVEREIGN-SUPPLY-UPGRADE.md  ARCHITECTURE_DECISIONS.md  ATTACK_PATTERNS.md  BRANDING.md  CHANGELOG.md  COMPARISON.md  COMPLETE.md  CONTRIBUTING.md  CORE-HARDENING-COMPLETE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPER_DOCS.md  ECONOMICS_TOKENOMICS.md  GOVERNANCE.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  LAPTOP-SETUP.md  LEGAL_COMPLIANCE.md  MAINNET-DEPLOYMENT.md  MAINNET_LAUNCH.md  NETWORK_DIAGNOSTICS_CHANGELOG.md  NETWORK_SETUP_GUIDE.md  ONNX_USAGE.md  PRODUCTION_FEATURES.md  PRODUCTION_READINESS.md  PUBLISH-QUICKREF.txt  PUBLISH-STATUS.md  README-DEV.md  README-PRODUCTION.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_SPEC.md  VALIDATOR-GUIDE.md  WHITEPAPER.md  (+22 more)
ai-oracle/: Cargo.toml  README.md
ai-oracle/src/: main.rs
config/: bootstrap.toml
contrib/: README-service.md  run_qubit.sh
docs/: ECONOMICS_TOKENOMICS.md  NETWORK_PROTOCOL.md  SECURITY_MODEL.md  TESTS_TODO.md
docs/sustainability/: impact-analysis.md  sustainability-report.md
explorer/: Cargo.toml
explorer-backend/: Cargo.toml  README.md
explorer-backend/src/: main.rs
explorer-frontend/: README.md  package.json
explorer-frontend/public/: index.html
explorer-frontend/src/: App.js
explorer-frontend/src/pages/: AddressDetail.js  BlockDetail.js  BlocksList.js  Dashboard.js  TransactionDetail.js
explorer/src/: main.rs
keys/: verification_key.json
openclaw/: README.md  __init__.py  agent_internet.py  axiom_openclaw_config.json  ceremony_master.py  manager.py  node_health_monitor.py  start.py
pow-mining/: Cargo.toml  README.md
pow-mining/src/: main.rs
scripts/: launch-mainnet.sh
sdk/: README.md
sdk/javascript/: README.md  package.json  qubit-sdk.js
sdk/python/: README.md  qubit_sdk.py  setup.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: ai_engine.rs  bridge.rs  chain.rs  config.rs  economics.rs  error.rs  genesis.rs  lib.rs  main.rs  mempool.rs  network.rs  openclaw_integration.rs  state.rs  storage.rs  vdf.rs
src/zk/: circuit.rs  mod.rs
tests/: advanced_tests.rs  integration_tests.rs  security_tests.rs  stress_tests.rs  test_integration.rs
zk-setup/: README.md  ceremony.sh  download-keys.sh
zk-setup/backup/: verification_key.json
